<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgunpas"
    tools:context=".MacActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="18dp"
                    android:padding="10dp"
                    android:id="@+id/linear_perhatian"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/perhatian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/perhatian"
                        android:textColor="@color/bodas"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/garbaw"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/bodas"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/bodas"
                        android:text="@string/konten_perhatian"/>

                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/bodas"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:text="@string/note"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="50dp"
                    android:layout_margin="18dp"
                    android:layout_below="@+id/linear_perhatian"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.phearme.macaddressedittext.MacAddressEditText
                        android:id="@+id/mac_input"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_bluetooth_black_24dp"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textColor="@color/bodas"
                        android:hint="@string/mac"
                        android:textColorHint="@color/hejotaikuda"
                        app:backgroundTint="@color/hejotaikuda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/buttonSendMacBT"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/button"
                        android:text="@string/update"
                        android:textColor="@color/black" />

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
</RelativeLayout>